y.output
State 59 conflicts: 2 shift/reduce
State 89 conflicts: 2 shift/reduce
State 90 conflicts: 2 shift/reduce
State 91 conflicts: 2 shift/reduce
State 92 conflicts: 2 shift/reduce


Grammar

    0 $accept: Module $end

    1 Module: DeclList

    2 DeclList: Decl DeclList
    3         | Decl

    4 Decl: IdList ':' BaseType
    5     | IdList "::" Literal
    6     | IdList ':' FuncDecl
    7     | IdList "::" CodeBlock

    8 IdList: IdItem ',' IdList
    9       | IdItem

   10 IdItem: Id

   11 Id: IDENT_TOK

   12 BaseType: "int"
   13         | "chr"
   14         | "bool"
   15         | "void"

   16 Literal: INTLIT_TOK
   17        | CHRLIT_TOK
   18        | BOOLLIT_TOK

   19 FuncDecl: '(' ')' "->" BaseType

   20 CodeBlock: '{' StmtSeq '}'

   21 StmtSeq: Stmt StmtSeq
   22        | %empty

   23 Stmt: AssignStmt
   24     | PutStmt
   25     | IfStmt
   26     | ElseStmt
   27     | WhileStmt
   28     | FuncStmt

   29 FuncStmt: Id '(' ')'

   30 AssignStmt: Id '=' Expr

   31 PutStmt: "put" '(' Expr ')'
   32        | "put" '(' String ')'

   33 String: STRLIT_TOK

   34 IfStmt: "if" Cond CodeBlock

   35 ElseStmt: "if" Cond CodeBlock "else" CodeBlock

   36 WhileStmt: "while" Cond CodeBlock

   37 Cond: Expr ">=" Expr
   38     | Expr ">" Expr
   39     | Expr "<=" Expr
   40     | Expr "<" Expr
   41     | Expr "##" Expr
   42     | Expr "==" Expr

   43 Expr: Expr '+' Expr
   44     | Expr '-' Expr
   45     | Expr '*' Expr
   46     | Expr '/' Expr
   47     | '-' Expr
   48     | Expr "++"
   49     | Expr "--"
   50     | '(' Expr ')'
   51     | Oprnd
   52     | "get" '(' BaseType ')'

   53 Oprnd: Literal
   54      | Id


Terminals, with rules where they appear

$end (0) 0
'(' (40) 19 29 31 32 50 52
')' (41) 19 29 31 32 50 52
'*' (42) 45
'+' (43) 43
',' (44) 8
'-' (45) 44 47
'/' (47) 46
':' (58) 4 6
'=' (61) 30
'{' (123) 20
'}' (125) 20
error (256)
IDENT_TOK (258) 11
"int" (259) 12
"chr" (260) 13
"bool" (261) 14
"void" (262) 15
INTLIT_TOK (263) 16
CHRLIT_TOK (264) 17
BOOLLIT_TOK (265) 18
STRLIT_TOK (266) 33
"->" (267) 19
"::" (268) 5 7
"get" (269) 52
"put" (270) 31 32
"if" (271) 34 35
"else" (272) 35
"while" (273) 36
">=" (274) 37
">" (275) 38
"<=" (276) 39
"<" (277) 40
"##" (278) 41
"==" (279) 42
"++" (280) 48
"--" (281) 49
UMINUS (282)


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
Module (40)
    on left: 1, on right: 0
DeclList (41)
    on left: 2 3, on right: 1 2
Decl (42)
    on left: 4 5 6 7, on right: 2 3
IdList (43)
    on left: 8 9, on right: 4 5 6 7 8
IdItem (44)
    on left: 10, on right: 8 9
Id (45)
    on left: 11, on right: 10 29 30 54
BaseType (46)
    on left: 12 13 14 15, on right: 4 19 52
Literal (47)
    on left: 16 17 18, on right: 5 53
FuncDecl (48)
    on left: 19, on right: 6
CodeBlock (49)
    on left: 20, on right: 7 34 35 36
StmtSeq (50)
    on left: 21 22, on right: 20 21
Stmt (51)
    on left: 23 24 25 26 27 28, on right: 21
FuncStmt (52)
    on left: 29, on right: 28
AssignStmt (53)
    on left: 30, on right: 23
PutStmt (54)
    on left: 31 32, on right: 24
String (55)
    on left: 33, on right: 32
IfStmt (56)
    on left: 34, on right: 25
ElseStmt (57)
    on left: 35, on right: 26
WhileStmt (58)
    on left: 36, on right: 27
Cond (59)
    on left: 37 38 39 40 41 42, on right: 34 35 36
Expr (60)
    on left: 43 44 45 46 47 48 49 50 51 52, on right: 30 31 37 38 39
    40 41 42 43 44 45 46 47 48 49 50
Oprnd (61)
    on left: 53 54, on right: 51


State 0

    0 $accept: . Module $end

    IDENT_TOK  shift, and go to state 1

    Module    go to state 2
    DeclList  go to state 3
    Decl      go to state 4
    IdList    go to state 5
    IdItem    go to state 6
    Id        go to state 7


State 1

   11 Id: IDENT_TOK .

    $default  reduce using rule 11 (Id)


State 2

    0 $accept: Module . $end

    $end  shift, and go to state 8


State 3

    1 Module: DeclList .

    $default  reduce using rule 1 (Module)


State 4

    2 DeclList: Decl . DeclList
    3         | Decl .

    IDENT_TOK  shift, and go to state 1

    $default  reduce using rule 3 (DeclList)

    DeclList  go to state 9
    Decl      go to state 4
    IdList    go to state 5
    IdItem    go to state 6
    Id        go to state 7


State 5

    4 Decl: IdList . ':' BaseType
    5     | IdList . "::" Literal
    6     | IdList . ':' FuncDecl
    7     | IdList . "::" CodeBlock

    "::"  shift, and go to state 10
    ':'   shift, and go to state 11


State 6

    8 IdList: IdItem . ',' IdList
    9       | IdItem .

    ','  shift, and go to state 12

    $default  reduce using rule 9 (IdList)


State 7

   10 IdItem: Id .

    $default  reduce using rule 10 (IdItem)


State 8

    0 $accept: Module $end .

    $default  accept


State 9

    2 DeclList: Decl DeclList .

    $default  reduce using rule 2 (DeclList)


State 10

    5 Decl: IdList "::" . Literal
    7     | IdList "::" . CodeBlock

    INTLIT_TOK   shift, and go to state 13
    CHRLIT_TOK   shift, and go to state 14
    BOOLLIT_TOK  shift, and go to state 15
    '{'          shift, and go to state 16

    Literal    go to state 17
    CodeBlock  go to state 18


State 11

    4 Decl: IdList ':' . BaseType
    6     | IdList ':' . FuncDecl

    "int"   shift, and go to state 19
    "chr"   shift, and go to state 20
    "bool"  shift, and go to state 21
    "void"  shift, and go to state 22
    '('     shift, and go to state 23

    BaseType  go to state 24
    FuncDecl  go to state 25


State 12

    8 IdList: IdItem ',' . IdList

    IDENT_TOK  shift, and go to state 1

    IdList  go to state 26
    IdItem  go to state 6
    Id      go to state 7


State 13

   16 Literal: INTLIT_TOK .

    $default  reduce using rule 16 (Literal)


State 14

   17 Literal: CHRLIT_TOK .

    $default  reduce using rule 17 (Literal)


State 15

   18 Literal: BOOLLIT_TOK .

    $default  reduce using rule 18 (Literal)


State 16

   20 CodeBlock: '{' . StmtSeq '}'

    IDENT_TOK  shift, and go to state 1
    "put"      shift, and go to state 27
    "if"       shift, and go to state 28
    "while"    shift, and go to state 29

    $default  reduce using rule 22 (StmtSeq)

    Id          go to state 30
    StmtSeq     go to state 31
    Stmt        go to state 32
    FuncStmt    go to state 33
    AssignStmt  go to state 34
    PutStmt     go to state 35
    IfStmt      go to state 36
    ElseStmt    go to state 37
    WhileStmt   go to state 38


State 17

    5 Decl: IdList "::" Literal .

    $default  reduce using rule 5 (Decl)


State 18

    7 Decl: IdList "::" CodeBlock .

    $default  reduce using rule 7 (Decl)


State 19

   12 BaseType: "int" .

    $default  reduce using rule 12 (BaseType)


State 20

   13 BaseType: "chr" .

    $default  reduce using rule 13 (BaseType)


State 21

   14 BaseType: "bool" .

    $default  reduce using rule 14 (BaseType)


State 22

   15 BaseType: "void" .

    $default  reduce using rule 15 (BaseType)


State 23

   19 FuncDecl: '(' . ')' "->" BaseType

    ')'  shift, and go to state 39


State 24

    4 Decl: IdList ':' BaseType .

    $default  reduce using rule 4 (Decl)


State 25

    6 Decl: IdList ':' FuncDecl .

    $default  reduce using rule 6 (Decl)


State 26

    8 IdList: IdItem ',' IdList .

    $default  reduce using rule 8 (IdList)


State 27

   31 PutStmt: "put" . '(' Expr ')'
   32        | "put" . '(' String ')'

    '('  shift, and go to state 40


State 28

   34 IfStmt: "if" . Cond CodeBlock
   35 ElseStmt: "if" . Cond CodeBlock "else" CodeBlock

    IDENT_TOK    shift, and go to state 1
    INTLIT_TOK   shift, and go to state 13
    CHRLIT_TOK   shift, and go to state 14
    BOOLLIT_TOK  shift, and go to state 15
    "get"        shift, and go to state 41
    '-'          shift, and go to state 42
    '('          shift, and go to state 43

    Id       go to state 44
    Literal  go to state 45
    Cond     go to state 46
    Expr     go to state 47
    Oprnd    go to state 48


State 29

   36 WhileStmt: "while" . Cond CodeBlock

    IDENT_TOK    shift, and go to state 1
    INTLIT_TOK   shift, and go to state 13
    CHRLIT_TOK   shift, and go to state 14
    BOOLLIT_TOK  shift, and go to state 15
    "get"        shift, and go to state 41
    '-'          shift, and go to state 42
    '('          shift, and go to state 43

    Id       go to state 44
    Literal  go to state 45
    Cond     go to state 49
    Expr     go to state 47
    Oprnd    go to state 48


State 30

   29 FuncStmt: Id . '(' ')'
   30 AssignStmt: Id . '=' Expr

    '('  shift, and go to state 50
    '='  shift, and go to state 51


State 31

   20 CodeBlock: '{' StmtSeq . '}'

    '}'  shift, and go to state 52


State 32

   21 StmtSeq: Stmt . StmtSeq

    IDENT_TOK  shift, and go to state 1
    "put"      shift, and go to state 27
    "if"       shift, and go to state 28
    "while"    shift, and go to state 29

    $default  reduce using rule 22 (StmtSeq)

    Id          go to state 30
    StmtSeq     go to state 53
    Stmt        go to state 32
    FuncStmt    go to state 33
    AssignStmt  go to state 34
    PutStmt     go to state 35
    IfStmt      go to state 36
    ElseStmt    go to state 37
    WhileStmt   go to state 38


State 33

   28 Stmt: FuncStmt .

    $default  reduce using rule 28 (Stmt)


State 34

   23 Stmt: AssignStmt .

    $default  reduce using rule 23 (Stmt)


State 35

   24 Stmt: PutStmt .

    $default  reduce using rule 24 (Stmt)


State 36

   25 Stmt: IfStmt .

    $default  reduce using rule 25 (Stmt)


State 37

   26 Stmt: ElseStmt .

    $default  reduce using rule 26 (Stmt)


State 38

   27 Stmt: WhileStmt .

    $default  reduce using rule 27 (Stmt)


State 39

   19 FuncDecl: '(' ')' . "->" BaseType

    "->"  shift, and go to state 54


State 40

   31 PutStmt: "put" '(' . Expr ')'
   32        | "put" '(' . String ')'

    IDENT_TOK    shift, and go to state 1
    INTLIT_TOK   shift, and go to state 13
    CHRLIT_TOK   shift, and go to state 14
    BOOLLIT_TOK  shift, and go to state 15
    STRLIT_TOK   shift, and go to state 55
    "get"        shift, and go to state 41
    '-'          shift, and go to state 42
    '('          shift, and go to state 43

    Id       go to state 44
    Literal  go to state 45
    String   go to state 56
    Expr     go to state 57
    Oprnd    go to state 48


State 41

   52 Expr: "get" . '(' BaseType ')'

    '('  shift, and go to state 58


State 42

   47 Expr: '-' . Expr

    IDENT_TOK    shift, and go to state 1
    INTLIT_TOK   shift, and go to state 13
    CHRLIT_TOK   shift, and go to state 14
    BOOLLIT_TOK  shift, and go to state 15
    "get"        shift, and go to state 41
    '-'          shift, and go to state 42
    '('          shift, and go to state 43

    Id       go to state 44
    Literal  go to state 45
    Expr     go to state 59
    Oprnd    go to state 48


State 43

   50 Expr: '(' . Expr ')'

    IDENT_TOK    shift, and go to state 1
    INTLIT_TOK   shift, and go to state 13
    CHRLIT_TOK   shift, and go to state 14
    BOOLLIT_TOK  shift, and go to state 15
    "get"        shift, and go to state 41
    '-'          shift, and go to state 42
    '('          shift, and go to state 43

    Id       go to state 44
    Literal  go to state 45
    Expr     go to state 60
    Oprnd    go to state 48


State 44

   54 Oprnd: Id .

    $default  reduce using rule 54 (Oprnd)


State 45

   53 Oprnd: Literal .

    $default  reduce using rule 53 (Oprnd)


State 46

   34 IfStmt: "if" Cond . CodeBlock
   35 ElseStmt: "if" Cond . CodeBlock "else" CodeBlock

    '{'  shift, and go to state 16

    CodeBlock  go to state 61


State 47

   37 Cond: Expr . ">=" Expr
   38     | Expr . ">" Expr
   39     | Expr . "<=" Expr
   40     | Expr . "<" Expr
   41     | Expr . "##" Expr
   42     | Expr . "==" Expr
   43 Expr: Expr . '+' Expr
   44     | Expr . '-' Expr
   45     | Expr . '*' Expr
   46     | Expr . '/' Expr
   48     | Expr . "++"
   49     | Expr . "--"

    ">="  shift, and go to state 62
    ">"   shift, and go to state 63
    "<="  shift, and go to state 64
    "<"   shift, and go to state 65
    "##"  shift, and go to state 66
    "=="  shift, and go to state 67
    "++"  shift, and go to state 68
    "--"  shift, and go to state 69
    '+'   shift, and go to state 70
    '-'   shift, and go to state 71
    '*'   shift, and go to state 72
    '/'   shift, and go to state 73


State 48

   51 Expr: Oprnd .

    $default  reduce using rule 51 (Expr)


State 49

   36 WhileStmt: "while" Cond . CodeBlock

    '{'  shift, and go to state 16

    CodeBlock  go to state 74


State 50

   29 FuncStmt: Id '(' . ')'

    ')'  shift, and go to state 75


State 51

   30 AssignStmt: Id '=' . Expr

    IDENT_TOK    shift, and go to state 1
    INTLIT_TOK   shift, and go to state 13
    CHRLIT_TOK   shift, and go to state 14
    BOOLLIT_TOK  shift, and go to state 15
    "get"        shift, and go to state 41
    '-'          shift, and go to state 42
    '('          shift, and go to state 43

    Id       go to state 44
    Literal  go to state 45
    Expr     go to state 76
    Oprnd    go to state 48


State 52

   20 CodeBlock: '{' StmtSeq '}' .

    $default  reduce using rule 20 (CodeBlock)


State 53

   21 StmtSeq: Stmt StmtSeq .

    $default  reduce using rule 21 (StmtSeq)


State 54

   19 FuncDecl: '(' ')' "->" . BaseType

    "int"   shift, and go to state 19
    "chr"   shift, and go to state 20
    "bool"  shift, and go to state 21
    "void"  shift, and go to state 22

    BaseType  go to state 77


State 55

   33 String: STRLIT_TOK .

    $default  reduce using rule 33 (String)


State 56

   32 PutStmt: "put" '(' String . ')'

    ')'  shift, and go to state 78


State 57

   31 PutStmt: "put" '(' Expr . ')'
   43 Expr: Expr . '+' Expr
   44     | Expr . '-' Expr
   45     | Expr . '*' Expr
   46     | Expr . '/' Expr
   48     | Expr . "++"
   49     | Expr . "--"

    "++"  shift, and go to state 68
    "--"  shift, and go to state 69
    '+'   shift, and go to state 70
    '-'   shift, and go to state 71
    '*'   shift, and go to state 72
    '/'   shift, and go to state 73
    ')'   shift, and go to state 79


State 58

   52 Expr: "get" '(' . BaseType ')'

    "int"   shift, and go to state 19
    "chr"   shift, and go to state 20
    "bool"  shift, and go to state 21
    "void"  shift, and go to state 22

    BaseType  go to state 80


State 59

   43 Expr: Expr . '+' Expr
   44     | Expr . '-' Expr
   45     | Expr . '*' Expr
   46     | Expr . '/' Expr
   47     | '-' Expr .
   48     | Expr . "++"
   49     | Expr . "--"

    "++"  shift, and go to state 68
    "--"  shift, and go to state 69

    "++"      [reduce using rule 47 (Expr)]
    "--"      [reduce using rule 47 (Expr)]
    $default  reduce using rule 47 (Expr)


State 60

   43 Expr: Expr . '+' Expr
   44     | Expr . '-' Expr
   45     | Expr . '*' Expr
   46     | Expr . '/' Expr
   48     | Expr . "++"
   49     | Expr . "--"
   50     | '(' Expr . ')'

    "++"  shift, and go to state 68
    "--"  shift, and go to state 69
    '+'   shift, and go to state 70
    '-'   shift, and go to state 71
    '*'   shift, and go to state 72
    '/'   shift, and go to state 73
    ')'   shift, and go to state 81


State 61

   34 IfStmt: "if" Cond CodeBlock .
   35 ElseStmt: "if" Cond CodeBlock . "else" CodeBlock

    "else"  shift, and go to state 82

    $default  reduce using rule 34 (IfStmt)


State 62

   37 Cond: Expr ">=" . Expr

    IDENT_TOK    shift, and go to state 1
    INTLIT_TOK   shift, and go to state 13
    CHRLIT_TOK   shift, and go to state 14
    BOOLLIT_TOK  shift, and go to state 15
    "get"        shift, and go to state 41
    '-'          shift, and go to state 42
    '('          shift, and go to state 43

    Id       go to state 44
    Literal  go to state 45
    Expr     go to state 83
    Oprnd    go to state 48


State 63

   38 Cond: Expr ">" . Expr

    IDENT_TOK    shift, and go to state 1
    INTLIT_TOK   shift, and go to state 13
    CHRLIT_TOK   shift, and go to state 14
    BOOLLIT_TOK  shift, and go to state 15
    "get"        shift, and go to state 41
    '-'          shift, and go to state 42
    '('          shift, and go to state 43

    Id       go to state 44
    Literal  go to state 45
    Expr     go to state 84
    Oprnd    go to state 48


State 64

   39 Cond: Expr "<=" . Expr

    IDENT_TOK    shift, and go to state 1
    INTLIT_TOK   shift, and go to state 13
    CHRLIT_TOK   shift, and go to state 14
    BOOLLIT_TOK  shift, and go to state 15
    "get"        shift, and go to state 41
    '-'          shift, and go to state 42
    '('          shift, and go to state 43

    Id       go to state 44
    Literal  go to state 45
    Expr     go to state 85
    Oprnd    go to state 48


State 65

   40 Cond: Expr "<" . Expr

    IDENT_TOK    shift, and go to state 1
    INTLIT_TOK   shift, and go to state 13
    CHRLIT_TOK   shift, and go to state 14
    BOOLLIT_TOK  shift, and go to state 15
    "get"        shift, and go to state 41
    '-'          shift, and go to state 42
    '('          shift, and go to state 43

    Id       go to state 44
    Literal  go to state 45
    Expr     go to state 86
    Oprnd    go to state 48


State 66

   41 Cond: Expr "##" . Expr

    IDENT_TOK    shift, and go to state 1
    INTLIT_TOK   shift, and go to state 13
    CHRLIT_TOK   shift, and go to state 14
    BOOLLIT_TOK  shift, and go to state 15
    "get"        shift, and go to state 41
    '-'          shift, and go to state 42
    '('          shift, and go to state 43

    Id       go to state 44
    Literal  go to state 45
    Expr     go to state 87
    Oprnd    go to state 48


State 67

   42 Cond: Expr "==" . Expr

    IDENT_TOK    shift, and go to state 1
    INTLIT_TOK   shift, and go to state 13
    CHRLIT_TOK   shift, and go to state 14
    BOOLLIT_TOK  shift, and go to state 15
    "get"        shift, and go to state 41
    '-'          shift, and go to state 42
    '('          shift, and go to state 43

    Id       go to state 44
    Literal  go to state 45
    Expr     go to state 88
    Oprnd    go to state 48


State 68

   48 Expr: Expr "++" .

    $default  reduce using rule 48 (Expr)


State 69

   49 Expr: Expr "--" .

    $default  reduce using rule 49 (Expr)


State 70

   43 Expr: Expr '+' . Expr

    IDENT_TOK    shift, and go to state 1
    INTLIT_TOK   shift, and go to state 13
    CHRLIT_TOK   shift, and go to state 14
    BOOLLIT_TOK  shift, and go to state 15
    "get"        shift, and go to state 41
    '-'          shift, and go to state 42
    '('          shift, and go to state 43

    Id       go to state 44
    Literal  go to state 45
    Expr     go to state 89
    Oprnd    go to state 48


State 71

   44 Expr: Expr '-' . Expr

    IDENT_TOK    shift, and go to state 1
    INTLIT_TOK   shift, and go to state 13
    CHRLIT_TOK   shift, and go to state 14
    BOOLLIT_TOK  shift, and go to state 15
    "get"        shift, and go to state 41
    '-'          shift, and go to state 42
    '('          shift, and go to state 43

    Id       go to state 44
    Literal  go to state 45
    Expr     go to state 90
    Oprnd    go to state 48


State 72

   45 Expr: Expr '*' . Expr

    IDENT_TOK    shift, and go to state 1
    INTLIT_TOK   shift, and go to state 13
    CHRLIT_TOK   shift, and go to state 14
    BOOLLIT_TOK  shift, and go to state 15
    "get"        shift, and go to state 41
    '-'          shift, and go to state 42
    '('          shift, and go to state 43

    Id       go to state 44
    Literal  go to state 45
    Expr     go to state 91
    Oprnd    go to state 48


State 73

   46 Expr: Expr '/' . Expr

    IDENT_TOK    shift, and go to state 1
    INTLIT_TOK   shift, and go to state 13
    CHRLIT_TOK   shift, and go to state 14
    BOOLLIT_TOK  shift, and go to state 15
    "get"        shift, and go to state 41
    '-'          shift, and go to state 42
    '('          shift, and go to state 43

    Id       go to state 44
    Literal  go to state 45
    Expr     go to state 92
    Oprnd    go to state 48


State 74

   36 WhileStmt: "while" Cond CodeBlock .

    $default  reduce using rule 36 (WhileStmt)


State 75

   29 FuncStmt: Id '(' ')' .

    $default  reduce using rule 29 (FuncStmt)


State 76

   30 AssignStmt: Id '=' Expr .
   43 Expr: Expr . '+' Expr
   44     | Expr . '-' Expr
   45     | Expr . '*' Expr
   46     | Expr . '/' Expr
   48     | Expr . "++"
   49     | Expr . "--"

    "++"  shift, and go to state 68
    "--"  shift, and go to state 69
    '+'   shift, and go to state 70
    '-'   shift, and go to state 71
    '*'   shift, and go to state 72
    '/'   shift, and go to state 73

    $default  reduce using rule 30 (AssignStmt)


State 77

   19 FuncDecl: '(' ')' "->" BaseType .

    $default  reduce using rule 19 (FuncDecl)


State 78

   32 PutStmt: "put" '(' String ')' .

    $default  reduce using rule 32 (PutStmt)


State 79

   31 PutStmt: "put" '(' Expr ')' .

    $default  reduce using rule 31 (PutStmt)


State 80

   52 Expr: "get" '(' BaseType . ')'

    ')'  shift, and go to state 93


State 81

   50 Expr: '(' Expr ')' .

    $default  reduce using rule 50 (Expr)


State 82

   35 ElseStmt: "if" Cond CodeBlock "else" . CodeBlock

    '{'  shift, and go to state 16

    CodeBlock  go to state 94


State 83

   37 Cond: Expr ">=" Expr .
   43 Expr: Expr . '+' Expr
   44     | Expr . '-' Expr
   45     | Expr . '*' Expr
   46     | Expr . '/' Expr
   48     | Expr . "++"
   49     | Expr . "--"

    "++"  shift, and go to state 68
    "--"  shift, and go to state 69
    '+'   shift, and go to state 70
    '-'   shift, and go to state 71
    '*'   shift, and go to state 72
    '/'   shift, and go to state 73

    $default  reduce using rule 37 (Cond)


State 84

   38 Cond: Expr ">" Expr .
   43 Expr: Expr . '+' Expr
   44     | Expr . '-' Expr
   45     | Expr . '*' Expr
   46     | Expr . '/' Expr
   48     | Expr . "++"
   49     | Expr . "--"

    "++"  shift, and go to state 68
    "--"  shift, and go to state 69
    '+'   shift, and go to state 70
    '-'   shift, and go to state 71
    '*'   shift, and go to state 72
    '/'   shift, and go to state 73

    $default  reduce using rule 38 (Cond)


State 85

   39 Cond: Expr "<=" Expr .
   43 Expr: Expr . '+' Expr
   44     | Expr . '-' Expr
   45     | Expr . '*' Expr
   46     | Expr . '/' Expr
   48     | Expr . "++"
   49     | Expr . "--"

    "++"  shift, and go to state 68
    "--"  shift, and go to state 69
    '+'   shift, and go to state 70
    '-'   shift, and go to state 71
    '*'   shift, and go to state 72
    '/'   shift, and go to state 73

    $default  reduce using rule 39 (Cond)


State 86

   40 Cond: Expr "<" Expr .
   43 Expr: Expr . '+' Expr
   44     | Expr . '-' Expr
   45     | Expr . '*' Expr
   46     | Expr . '/' Expr
   48     | Expr . "++"
   49     | Expr . "--"

    "++"  shift, and go to state 68
    "--"  shift, and go to state 69
    '+'   shift, and go to state 70
    '-'   shift, and go to state 71
    '*'   shift, and go to state 72
    '/'   shift, and go to state 73

    $default  reduce using rule 40 (Cond)


State 87

   41 Cond: Expr "##" Expr .
   43 Expr: Expr . '+' Expr
   44     | Expr . '-' Expr
   45     | Expr . '*' Expr
   46     | Expr . '/' Expr
   48     | Expr . "++"
   49     | Expr . "--"

    "++"  shift, and go to state 68
    "--"  shift, and go to state 69
    '+'   shift, and go to state 70
    '-'   shift, and go to state 71
    '*'   shift, and go to state 72
    '/'   shift, and go to state 73

    $default  reduce using rule 41 (Cond)


State 88

   42 Cond: Expr "==" Expr .
   43 Expr: Expr . '+' Expr
   44     | Expr . '-' Expr
   45     | Expr . '*' Expr
   46     | Expr . '/' Expr
   48     | Expr . "++"
   49     | Expr . "--"

    "++"  shift, and go to state 68
    "--"  shift, and go to state 69
    '+'   shift, and go to state 70
    '-'   shift, and go to state 71
    '*'   shift, and go to state 72
    '/'   shift, and go to state 73

    $default  reduce using rule 42 (Cond)


State 89

   43 Expr: Expr . '+' Expr
   43     | Expr '+' Expr .
   44     | Expr . '-' Expr
   45     | Expr . '*' Expr
   46     | Expr . '/' Expr
   48     | Expr . "++"
   49     | Expr . "--"

    "++"  shift, and go to state 68
    "--"  shift, and go to state 69
    '*'   shift, and go to state 72
    '/'   shift, and go to state 73

    "++"      [reduce using rule 43 (Expr)]
    "--"      [reduce using rule 43 (Expr)]
    $default  reduce using rule 43 (Expr)

